force-app/main/default/objects/Supplement__mdt/Supplement__mdt.object-meta.xml
<CustomObject>
    <description>Defines surcharges applied after the base price and return discount (Steps 8–9). Supports two calculation methods: Percentage (multiplicative, cascading) and Fixed (additive). Supplements can be unconditionally applied (always active) or conditionally triggered based on a field/value pair. Each record is country-specific and temporally bounded by effective dates.</description>
    <label>Supplement</label>
    <pluralLabel>Supplements</pluralLabel>
</CustomObject>