force-app/main/default/objects/Supplement__mdt/fields/Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Method__c</fullName>
    <description>Determines how the supplement is applied to the calculated price. Percentage: the supplement value is applied as a proportional surcharge (price × (1 + value / 100)). Percentage supplements are applied first and cascade multiplicatively. Fixed: the supplement value is added as a flat amount in the specified currency (price + value). Fixed supplements are applied after all percentage supplements.</description>
    <inlineHelpText>Select Percentage for proportional surcharges or Fixed for flat-amount surcharges.</inlineHelpText>
    <label>Calculation Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>