force-app/main/default/objects/Supplement__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>ISO 3166-1 alpha-2 country code. The engine filters supplement records by matching this against Trip__c.Country_Code__c. Supplements are country-specific.</description>
    <inlineHelpText>ISO country code (e.g., FR, DE). This supplement only applies to trips in this country.</inlineHelpText>
    <label>Country Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>