force-app/main/default/objects/Supplement__mdt/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <description>ISO 4217 currency code for fixed-amount supplements. Ignored for percentage supplements. Used by the engine at Step 10 if currency conversion is needed.</description>
    <inlineHelpText>ISO currency code (e.g., EUR, GBP). Only required for Fixed supplements. Ignored for Percentage.</inlineHelpText>
    <label>Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>