force-app/main/default/objects/Supplement__mdt/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Date__c</fullName>
    <description>End date of validity (inclusive). The engine filters: Effective_End_Date__c ≥ Trip__c.Trip_Date__c OR field is blank. Blank = no expiration.</description>
    <inlineHelpText>End date of this supplement&apos;s validity (inclusive). Leave blank for no expiration.</inlineHelpText>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>