force-app/main/default/objects/Supplement__mdt/fields/Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start_Date__c</fullName>
    <description>Start date of validity (inclusive). The engine filters: Effective_Start_Date__c ≤ Trip__c.Trip_Date__c. Allows temporal management of surcharges (e.g., annual fuel index).</description>
    <inlineHelpText>Start date of this supplement&apos;s validity (inclusive). Example: 2025-01-01.</inlineHelpText>
    <label>Effective Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>