force-app/main/default/objects/Supplement__mdt/fields/Is_Always_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Always_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked (true), this supplement is applied to ALL trips for the matching country, without evaluating any trigger condition. Used for universal surcharges like fuel surcharge or German Maut toll. When unchecked, the engine evaluates Trigger_Field__c / Trigger_Value__c to determine applicability.</description>
    <inlineHelpText>Check this box if the supplement applies to ALL trips in the country (e.g., fuel surcharge). Leave unchecked for conditional supplements.</inlineHelpText>
    <label>Is Always Active</label>
    <type>Checkbox</type>
</CustomField>