force-app/main/default/objects/Supplement__mdt/fields/Supplement_Value__c.field-meta.xml
<CustomField>
    <fullName>Supplement_Value__c</fullName>
    <description>Numeric value of the supplement. Interpretation depends on Calculation_Method__c: if Percentage → 8.00 means +8%; if Fixed → 75.00 means +75 in the currency specified by Currency_Code__c.</description>
    <inlineHelpText>Value of the supplement. For Percentage: enter 8 for +8%. For Fixed: enter 75 for +75 in the defined currency.</inlineHelpText>
    <label>Supplement Value</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>