force-app/main/default/objects/Supplement__mdt/fields/Trigger_Code__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Code__c</fullName>
    <description>Unique business identifier for this supplement. Used for audit logging in Trip__c.Calculation_Detail__c and for programmatic reference. Format: descriptive uppercase code with year suffix.</description>
    <inlineHelpText>Unique identifier for this supplement (e.g., FUEL_2025, URGENT_FR_2025, DIFFICULT_ACCESS).</inlineHelpText>
    <label>Trigger Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>