force-app/main/default/objects/Supplement__mdt/fields/Trigger_Field__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Field__c</fullName>
    <description>Fully qualified API name of the field to evaluate on the Trip or its related objects. The engine reads this field value at runtime. Supported paths: Opportunity.Transport_Urgency__c, Destination_Location__r.Site_Access__c, or direct Trip fields. Ignored when Is_Always_Active__c = true.</description>
    <inlineHelpText>API field path to evaluate (e.g., Opportunity.Transport_Urgency__c or Destination_Location__r.Site_Access__c). Leave blank if Always Active.</inlineHelpText>
    <label>Trigger Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>