force-app/main/default/objects/Supplement__mdt/fields/Trigger_Value__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Value__c</fullName>
    <description>Expected value of the trigger field. If the actual runtime value equals this value (case-sensitive string comparison), the supplement is applied. Ignored when Is_Always_Active__c = true.</description>
    <inlineHelpText>Value that triggers this supplement (e.g., Express, Difficult). Must match exactly. Leave blank if Always Active.</inlineHelpText>
    <label>Trigger Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>